fix: reduce letter spacing

--- a/app/themes/hunger-tv/assets/styles/globals/utilities.scss
+++ b/app/themes/hunger-tv/assets/styles/globals/utilities.scss
@@ -6,7 +6,7 @@
 
 .uppercase {
 	text-transform: uppercase;
-	letter-spacing: 1px;
+	letter-spacing: 0.02em;
 	@include eta;
 }
 
